[package]
name = "rsm"
version = "0.1.0"
authors = ["Olivier Paugam <opaugam@gmail.com>"]

[dependencies]
bincode      = "1.0"
clap         = "2.32"
ctrlc        = { version = "3.0", features = ["termination"] }
memmap       = "0.6"
rand         = "0.5"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
slog         = "2.2"
slog-async   = "2.2"
slog-term    = "2.4"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "locking"
harness = false

[lib]
name = "rsm"
path = "src/lib.rs"

[[bin]]
name = "cluster"
path = "src/bin/cluster.rs"

[features]
chaos = []
